portal_ai/terraform/helm/configs/charts/local_custom/apps/codeserver/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: code-server
 namespace: de
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: code-server
